fixed navbar z-index

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -39,6 +39,7 @@ html {
   position: fixed;
   right: 0;
   padding: 0 2em 0 2em;
+  z-index: 1;
 
   .header {
     float: left;
